[package]
name = "rayrust-macros"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Proc macros for rayrust: #[remote] and #[actor] code generation"
repository = "https://github.com/NolanHo/rayrust"
keywords = ["ray", "distributed", "macro", "proc-macro"]
categories = ["api-bindings", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
