[package]
name = "rayrust"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Ray distributed computing — wraps the Ray C++ SDK via FFI"

[dependencies]
rayrust-sys = { path = "../rayrust-sys" }
rayrust-macros = { path = "../rayrust-macros" }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
ctor = "0.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
