[package]
name = "rayrust"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "Rust SDK for Ray distributed computing — wraps the Ray C++ SDK via FFI"
repository = "https://github.com/NolanHo/rayrust"
keywords = ["ray", "distributed", "cluster", "actor", "task"]
categories = ["api-bindings", "concurrency", "external-ffi-bindings"]

[dependencies]
rayrust-sys = { path = "../rayrust-sys", version = "0.2.1" }
rayrust-macros = { path = "../rayrust-macros", version = "0.2.1" }
rmp-serde = "1.3"
rmpv = { version = "1.3", features = ["with-serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
ctor = "0.2"
tokio = { version = "1", features = ["full"] }
libc = "0.2"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
